k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: distributed-systems
  annotations:
    # Empezar con staging, cambiar a letsencrypt-prod después de verificar
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 0fprod.uk
      secretName: app-tls
  rules:
    - host: 0fprod.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
